@@ -81,13 +81,13 @@ struct
 { E_SFR_INIT, ERROR_LEVEL_ERROR,
    "Absolute address & initial value both cannot be specified for\n"
    " a 'sfr','sbit' storage class, initial value ignored '%s'" },
-{ E_INIT_IGNORED, ERROR_LEVEL_WARNING,
+{ W_INIT_IGNORED, ERROR_LEVEL_WARNING,
    "Variable in the storage class cannot be initialized.'%s'" },
 { E_AUTO_ASSUMED, ERROR_LEVEL_ERROR,
    "storage class not allowed for automatic variable '%s' in reentrant function unless static" },
 { E_AUTO_ABSA, ERROR_LEVEL_ERROR,
    "absolute address not allowed for automatic var '%s' in reentrant function " },
-{ E_INIT_WRONG, ERROR_LEVEL_WARNING,
+{ W_INIT_WRONG, ERROR_LEVEL_WARNING,
    "Initializer different levels of indirections" },
 { E_FUNC_REDEF, ERROR_LEVEL_ERROR,
    "Function name '%s' redefined " },
@@ -115,7 +115,7 @@ struct
    "type must be INT for bit field definition" },
 { E_BITFLD_SIZE, ERROR_LEVEL_ERROR,
    "bit field size greater than 16 . assuming 16" },
-{ E_TRUNCATION, ERROR_LEVEL_WARNING,
+{ W_TRUNCATION, ERROR_LEVEL_WARNING,
    "high order truncation might occur" },
 { E_CODE_WRITE, ERROR_LEVEL_ERROR,
    "Attempt to assign value to a constant variable %s" },
@@ -171,7 +171,7 @@ struct
    "void function returning value" },
 { E_VOID_FUNC, ERROR_LEVEL_ERROR,
    "function '%s' must return value" },
-{ E_RETURN_MISMATCH, ERROR_LEVEL_WARNING,
+{ W_RETURN_MISMATCH, ERROR_LEVEL_WARNING,
    "function return value mismatch" },
 { E_CASE_CONTEXT, ERROR_LEVEL_ERROR,
    "'case/default' found without 'switch'.statement ignored" },
@@ -207,13 +207,13 @@ struct
    "Pre-Processor %s" },
 { E_DUP_FAILED, ERROR_LEVEL_ERROR,
    "_dup call failed" },
-{ E_INCOMPAT_CAST, ERROR_LEVEL_WARNING,
+{ W_INCOMPAT_CAST, ERROR_LEVEL_WARNING,
    "pointer being cast to incompatible type " },
-{ E_LOOP_ELIMINATE, ERROR_LEVEL_WARNING,
+{ W_LOOP_ELIMINATE, ERROR_LEVEL_WARNING,
    "'while' loop with 'zero' constant.loop eliminated" },
 { W_NO_SIDE_EFFECTS, ERROR_LEVEL_WARNING,
    "%s expression has NO side effects.expr eliminated" },
-{ E_CONST_TOO_LARGE, ERROR_LEVEL_PEDANTIC,
+{ W_CONST_TOO_LARGE, ERROR_LEVEL_PEDANTIC,
    "constant value '%s', out of range." },
 { W_BAD_COMPARE, ERROR_LEVEL_WARNING,
    "comparison will either, ALWAYs succeed or ALWAYs fail" },
@@ -235,7 +235,7 @@ struct
    "storage class CANNOT be specified for bit variable '%s'" },
 { E_EXTERN_MISMATCH, ERROR_LEVEL_ERROR,
    "extern definition for '%s' mismatches with declaration." },
-{ E_NONRENT_ARGS, ERROR_LEVEL_WARNING,
+{ W_NONRENT_ARGS, ERROR_LEVEL_WARNING,
    "Functions called via pointers must be 'reentrant' to take arguments" },
 { W_DOUBLE_UNSUPPORTED, ERROR_LEVEL_WARNING,
    "type 'double' not supported assuming 'float'" },
@@ -259,7 +259,7 @@ struct
    "too few parameters" },
 { E_FUNC_NO_CODE, ERROR_LEVEL_ERROR,
    "code not generated for '%s' due to previous errors" },
-{ E_TYPE_MISMATCH_PARM, ERROR_LEVEL_WARNING,
+{ E_TYPE_MISMATCH_PARM, ERROR_LEVEL_ERROR,
    "type mismatch for parameter number %d" },
 { E_INVALID_FLOAT_CONST, ERROR_LEVEL_ERROR,
    "invalid float constant '%s'" },
@@ -269,7 +269,7 @@ struct
    "switch value not an integer" },
 { E_CASE_NON_INTEGER, ERROR_LEVEL_ERROR,
    "case label not an integer" },
-{ E_FUNC_TOO_LARGE, ERROR_LEVEL_WARNING,
+{ W_FUNC_TOO_LARGE, ERROR_LEVEL_WARNING,
    "function '%s' too large for global optimization" },
 { W_CONTROL_FLOW, ERROR_LEVEL_PEDANTIC,
    "conditional flow changed by optimizer '%s(%d)':so said EVELYN the modified DOG" },
@@ -277,9 +277,9 @@ struct
    "invalid type specifier for pointer type specifier ignored" },
 { W_IMPLICIT_FUNC, ERROR_LEVEL_WARNING,
    "function '%s' implicit declaration" },
-{ E_CONTINUE, ERROR_LEVEL_WARNING,
+{ W_CONTINUE, ERROR_LEVEL_WARNING,
    "%s" },
-{ W_TOOMANY_SPILS, ERROR_LEVEL_INFO,
+{ I_TOOMANY_SPILS, ERROR_LEVEL_INFO,
    "extended by %d bytes for compiler temp(s) :in function  '%s': %s " },
 { W_UNKNOWN_PRAGMA, ERROR_LEVEL_WARNING,
    "unknown or unsupported #pragma directive '%s'" },
